crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_conditional_annotation.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_conditional_annotation/main.py
---
packages:
  - cond-ann-pkg
count: 1
