crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_consumer_dunder_reads.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_consumer_dunder_reads/main.py
---
packages:
  - spec-provider-pkg
count: 1
