crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_consumer_reload.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_consumer_reload/main.py
---
packages:
  - reload-target-pkg
count: 1
