crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_cross_root_external_dependent.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_cross_root_external_dependent/main.py
---
packages:
  - cross-root-blocked
  - cross-root-pure
count: 2
