crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_destructured_alias.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_destructured_alias/main.py
---
packages:
  - destructured-alias-pkg
count: 1
