crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_dict_introspection.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_dict_introspection/main.py
---
packages:
  - dict-pkg
count: 1
