crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_dotted_hashable.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_dotted_hashable/main.py
---
packages:
  - dh-pkg
count: 1
