crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_dunder_package_context.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_dunder_package_context/main.py
---
packages:
  - anchored-pkg
count: 1
