crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_dunder_path.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_dunder_path/main.py
---
packages:
  - path-scanner-pkg
count: 1
