crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_dunder_read_alias.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_dunder_read_alias/main.py
---
packages:
  - aliased-spec-pkg
count: 1
